Missing CREATE TYPE statement for exporting enums for postresql fixed

BUG:400802
FIXED-IN:2.26.80 (KDE Applications 16.11.80)